// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@presenter/auth/login fails to log in user with invalid email 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "email",
      "message": "Invalid email",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/login fails to log in user without both credentials 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "email",
      "message": "Expected string with a length between 0 and 255 characters",
    },
    Object {
      "field": "password",
      "message": "Expected string with a length between 0 and 255 characters",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/login fails to log in user without email 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "email",
      "message": "Expected string with a length between 0 and 255 characters",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/login fails to log in user without email 2`] = `
Object {
  "errors": Array [
    Object {
      "field": "email",
      "message": "Expected string with a length between 0 and 255 characters",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/login fails to log in user without password 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "password",
      "message": "Expected string with a length between 0 and 255 characters",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/login locks user account when too many login requests attempted 1`] = `
Object {
  "message": "Too many invalid login attempts.
  Your account has been locked for 10 minutes",
}
`;

exports[`@presenter/auth/login should fail to log in a user when password is invalid 1`] = `
Object {
  "message": "Invalid email and/or password",
}
`;

exports[`@presenter/auth/login should fail to log in a user when user account is not verified 1`] = `
Object {
  "message": "Account unverified. Please verify you email by clicking an email you received from us",
}
`;

exports[`@presenter/auth/login should fail to log in a user when user has been soft deleted 1`] = `
Object {
  "message": "Invalid email and/or password",
}
`;

exports[`@presenter/auth/login should fail to log in when user does not exist 1`] = `
Object {
  "message": "Invalid email and/or password",
}
`;
